--- a/rails/flix/app/views/movies/index.html.erb
+++ b/rails/flix/app/views/movies/index.html.erb
@@ -1,3 +1,7 @@
-<% @movies.each do |movie| %>
-  <li><%= movie %></li>
+<ul>
+  <% @movies.each do |movie| %>
+    <li>
+      <%= movie.title %> (<%= movie.rating%>): <%= number_to_currency(movie.total_gross, precision: 0) %>
+    </li>
   <% end %>
+</ul>
