--- a/rails/flix/app/views/movies/index.html.erb
+++ b/rails/flix/app/views/movies/index.html.erb
@@ -2,6 +2,12 @@
   <% @movies.each do |movie| %>
     <li>
       <%= movie.title %> (<%= movie.rating%>): <%= number_to_currency(movie.total_gross, precision: 0) %>
+      <p>
+        <%= movie.description %>
+      </p>
+      <p>
+        <%= movie.released_on %>
+      </p>
     </li>
   <% end %>
 </ul>
