--- a/rails/flix/app/views/movies/index.html.erb
+++ b/rails/flix/app/views/movies/index.html.erb
@@ -1,12 +1,12 @@
 <ul>
   <% @movies.each do |movie| %>
     <li>
-      <%= movie.title %> (<%= movie.rating%>): <%= number_to_currency(movie.total_gross, precision: 0) %>
+      <%= movie.title %> (<%= movie.rating%>): <%= total_gross(movie) %>
       <p>
-        <%= movie.description %>
+        <%= movie.description.truncate(40, separator: ' ') %>
       </p>
       <p>
-        <%= movie.released_on %>
+        <%= year_of(movie) %>
       </p>
     </li>
   <% end %>
