--- a/rails/flix/app/views/movies/index.html.erb
+++ b/rails/flix/app/views/movies/index.html.erb
@@ -1,13 +1,15 @@
-<ul>
-  <% @movies.each do |movie| %>
-    <li>
-      <%= movie.title %> (<%= movie.rating%>): <%= total_gross(movie) %>
+<% @movies.each do |movie| %>
+  <section class="movie">
+    <div class="summary">
+      <h2>
+        <%= movie.title %>
+      </h2>
+      <h3>
+        <%= total_gross(movie) %>
+      </h3>
       <p>
-        <%= movie.description.truncate(40, separator: ' ') %>
+        <%= truncate(movie.description, length: 150, separator: ' ') %>
       </p>
-      <p>
-        <%= year_of(movie) %>
-      </p>
-    </li>
-  <% end %>
-</ul>
+    </div>
+  </section>
+<% end %>
