--- a/rails/flix/app/views/layouts/application.html.erb
+++ b/rails/flix/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-      <%= image_tag("logo.png") %>
+      <%= link_to image_tag("logo.png"), root_path %>
     </header>
     <div class="content">
       <%= yield %>
