--- a/rails/flix/app/views/movies/edit.html.erb
+++ b/rails/flix/app/views/movies/edit.html.erb
@@ -1,18 +1,3 @@
-<%= form_with(model: @movie) do |f| %>
-  <%= f.label :title, "Title" %>
-  <%= f.text_field :title %>
+<h1>Editing Movie: <%= @movie.title %></h1>
 
-  <%= f.label :description, "Description" %>
-  <%= f.text_area :description, rows: 7 %>
-
-  <%= f.label :rating, "Rating" %>
-  <%= f.text_field :rating %>
-
-  <%= f.label :released_on, "Released on" %>
-  <%= f.date_field :released_on %>
-
-  <%= f.label :total_gross, "Total gross" %>
-  <%= f.number_field :total_gross %>
-
-  <%= f.submit %>
-<% end %>
+<%= render "form", movie: @movie %>
