--- a/rails/flix/app/views/movies/new.html.erb
+++ b/rails/flix/app/views/movies/new.html.erb
@@ -1,19 +1,2 @@
 <h1>Create a New Movie</h1>
-<%= form_with(model: @movie) do |f| %>
-  <%= f.label :title, "Title" %>
-  <%= f.text_field :title %>
-
-  <%= f.label :description, "Description" %>
-  <%= f.text_area :description, rows: 7 %>
-
-  <%= f.label :rating, "Rating" %>
-  <%= f.text_field :rating %>
-
-  <%= f.label :released_on, "Released on" %>
-  <%= f.date_field :released_on %>
-
-  <%= f.label :total_gross, "Total gross" %>
-  <%= f.number_field :total_gross %>
-
-  <%= f.submit %>
-<% end %>
+<%= render "form", movie: @movie %>
