rails: migration revisited

--- a/rails/flix/app/views/movies/_form.html.erb
+++ b/rails/flix/app/views/movies/_form.html.erb
@@ -5,6 +5,15 @@
   <%= f.label :description, "Description" %>
   <%= f.text_area :description, rows: 7 %>
 
+  <%= f.label :director, "Director" %>
+  <%= f.text_field :director %>
+
+  <%= f.label :duration, "Duration" %>
+  <%= f.text_field :duration %>
+
+  <%= f.label :image_file_name, "Image file name" %>
+  <%= f.text_field :image_file_name %>
+
   <%= f.label :rating, "Rating" %>
   <%= f.text_field :rating %>
 
