--- a/rails/flix/app/views/movies/index.html.erb
+++ b/rails/flix/app/views/movies/index.html.erb
@@ -7,6 +7,9 @@
       <h2>
         <%= link_to(movie.title, movie_path(movie)) %>
       </h2>
+      <span class="stars">
+        <%= average_stars(movie) %>
+      </span>
       <h3>
         <%= total_gross(movie) %>
       </h3>
